fixed Überuns Overlay

--- a/html/Angebot.html
+++ b/html/Angebot.html
@@ -56,8 +56,8 @@
             </article>
 
             <article class="einladungBox">
-                <p class="einladungTitel">Mach den ersten Schritt</p>
-                <p>Neugierig auf neue Gspändli in deiner Umgebung?</p>
+                <p class="paragraphTitel center">Mach den ersten Schritt</p>
+                <p class="paragraphText center" >Neugierig auf neue Gspändli in deiner Umgebung?</p>
                 <div class=einladungAnmeldung>
                     <p id="anmeldung">Anmeldung</p>
                     <p id="registrieren">Registrieren</p>
