--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -56,7 +56,7 @@
 
         <section class="team">
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Janic.png" alt="Portrait Janic" class="bildPortrait">
+                <img src="../Images/ueberuns/Quadrate/Janic def.jpg" alt="Portrait Janic" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
                         <h2 class="portraitTitle">Janic</h2>
@@ -67,12 +67,12 @@
             </article>
 
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Jazz.png" alt="Portrait Jazz" class="bildPortrait">
+                <img src="../Images/ueberuns/Quadrate/Jazz def.jpg" alt="Portrait Jazz" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
-                        <h2>Jazz</h2>
-                        <p>Personalunternehmen/ Interne Kommunikation</p>
-                        <p>«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die australische Leidenschaft für Pubs
+                        <h2 class="portraitTitle">Jazz</h2>
+                        <p class="portraitFunction">Personalunternehmen/ Interne Kommunikation</p>
+                        <p class="portraitDescription">«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die australische Leidenschaft für Pubs
                             und
                             Vokuhilas; sowie die schweizerische Begeisterung für Struktur und Wandern. Bern bietet mir
                             von
@@ -81,36 +81,36 @@
                 </div>
             </article>
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Mali.png" alt="Portrait Mali" class="bildPortrait">
+                <img src="../Images/ueberuns/Quadrate/Mali.jpg" alt="Portrait Mali" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
-                        <h2>Mali</h2>
-                        <p>Creative Direktorin/ Designerin/ Webdesignerin</p>
-                        <p>«Meine Geldbörse und ich haben eine komplizierte Beziehung - insbesondere wenn es um den Kauf
+                        <h2 class="portraitTitle">Mali</h2>
+                        <p class="portraitFunction">Creative Direktorin/ Designerin/ Webdesignerin</p>
+                        <p class="portraitDescription">«Meine Geldbörse und ich haben eine komplizierte Beziehung - insbesondere wenn es um den Kauf
                             von
                             Konzertkarten und Kinotickets geht.»</p>
                     </div>
                 </div>
             </article>
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Sigi.png" alt="Portrait Sigi" class="bildPortrait">
+                <img src="../Images/ueberuns/Quadrate/Sigi def.jpg" alt="Portrait Sigi" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
-                        <h2>Sigi</h2>
-                        <p>Content-Verfasser/ Manager public relations</p>
-                        <p>«Für gutes Essen, ein frisch gezapftes Bier und fätzige Live-Musik würde ich Berge versetzen
+                        <h2 class="portraitTitle">Sigi</h2>
+                        <p class="portraitFunction">Content-Verfasser/ Manager public relations</p>
+                        <p class="portraitDescription">«Für gutes Essen, ein frisch gezapftes Bier und fätzige Live-Musik würde ich Berge versetzen
                             -
                             dieses Gefühl anderen Menschen zu vermitteln, ist meine grösste Freude.»</p>
                     </div>
                 </div>
             </article>
             <article class="containerPortrait">
-                <img src="../Images/ueberuns/Zoé.png" alt="Portrait Zoé" class="bildPortrait">
+                <img src="../Images/ueberuns/Quadrate/Zoé def.jpg" alt="Portrait Zoé" class="bildPortrait">
                 <div class="overlay">
                     <div class="portraitText">
-                        <h2>Zoé</h2>
-                        <p>Gesamtmanagement/ Finanz Chef</p>
-                        <p>«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten unternehmen und dabei meine
+                        <h2 class="portraitTitle">Zoé</h2>
+                        <p class="portraitFunction">Gesamtmanagement/ Finanz Chef</p>
+                        <p class="portraitDescription">«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten unternehmen und dabei meine
                             Leidenschaft für Planung und Organisation ausleben.»</p>
                     </div>
                 </div>
