i don't even know

--- a/html/home.html
+++ b/html/home.html
@@ -12,27 +12,29 @@
 </head>
 
 <body>
-        <header>
-            <section class="toolbar">
-                <div class="toolbarLeft">
+    <header>
+        <section class="toolbar">
+            <div class="toolbarLeft">
                 <img src="../Images/Icons/Settings.png" alt="Einstellungen" class="headerIcons">
-                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons"></div>
-                <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
-                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons"></div>
-            </section>
-            <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logoHome">
-            <h1>wöus zäme meh fäggt! </h1>
+                <img src="../Images/Icons/Home.png" alt="Home" class="headerIcons">
+            </div>
+            <div class="toolbarRight"><img src="../Images/Icons/Herz.png" alt="Like" class="headerIcons">
+                <img src="../Images/Icons/Profil.png" alt="Profil" class="headerIcons">
+            </div>
+        </section>
+        <img src="../Images/Logo.png" alt="logo Bärnläbt" class="logoHome">
+        <h1>wöus zäme meh fäggt! </h1>
 
-            <section class="menu-container">
-                <a href="home.html" class="button menu" id="buttonActive">Home</a>
-                <a href="angebot.html" class="button menu">Angebot</a>
-                <a href="ueberuns.html" class="button menu">Über uns</a>
-                <a href="kontakt.html" class="button menu">Kontakt</a>
-            </section>
+        <section class="menu-container">
+            <a href="home.html" class="button menu" id="buttonActive">Home</a>
+            <a href="angebot.html" class="button menu">Angebot</a>
+            <a href="ueberuns.html" class="button menu">Über uns</a>
+            <a href="kontakt.html" class="button menu">Kontakt</a>
+        </section>
 
-            <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
-        </header>
-        <main>
+        <p>BÄRNLÄBT hilft dir dabei dich kulturell und sozial zu vernetzen.</p>
+    </header>
+    <main>
         <section>
             <Article class="teaser">
                 <img src="../Images/home/01_Bild.jpeg" alt="vier freunde sitzen gemütlich beieinander"
@@ -47,17 +49,17 @@
             </article>
 
             <article class="teaser reverse">
-             
-                    <div class="teaserBoxLinks" >
-                        <h2 class="teaserTextLinks">Event finde</h2>
-                        <p class="teaserTextLinks">BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der
-                            Stadt Bern zu suchen.
-                            Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
-                        </p>
-                        <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
-                    </div>
-                    <img src="../Images/home/09_Bild.jpeg" alt="platzhalter" class="teaserimage">
-            
+
+                <div class="teaserBoxLinks">
+                    <h2 class="teaserTextLinks">Event finde</h2>
+                    <p class="teaserTextLinks">BÄRNLÄBT bietet dir die Möglichkeit kulturelle Veranstaltungen in der
+                        Stadt Bern zu suchen.
+                        Gleichzeitig helfen wir dir die ideale Begleitung für diesen Event zu finden.
+                    </p>
+                    <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
+                </div>
+                <img src="../Images/home/09_Bild.jpeg" alt="platzhalter" class="teaserimage">
+
             </article>
 
             <h3 id="spass">z'zwoite machts eifach meh Spass</h3>
@@ -78,15 +80,15 @@
             </article>
 
             <article class="teaser reverse">
-                    <div class="teaserBoxLinks">
-                        <h2 class="teaserTextLinks">Hobby sueche</h2>
-                        <p class="teaserTextLinks">Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden un
-                            diese
-                            zusammen mit jemandem besuchen, der deine Leidenschaft teilt.
-                        </p>
-                        <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
-                    </div>
-                    <img src="../Images/home/15_Bild.png" alt="platzhalter" class="teaserimage">
+                <div class="teaserBoxLinks">
+                    <h2 class="teaserTextLinks">Hobby sueche</h2>
+                    <p class="teaserTextLinks">Mit BÄRNLÄBT kannst du eine passende Freizeitaktivität finden un
+                        diese
+                        zusammen mit jemandem besuchen, der deine Leidenschaft teilt.
+                    </p>
+                    <a href="angebot.html" class="button" class="teaserTextLinks">Mehr erfahren</a>
+                </div>
+                <img src="../Images/home/15_Bild.png" alt="platzhalter" class="teaserimage">
             </article>
         </section>
         <Section class="eventliste">
@@ -94,11 +96,10 @@
 
             <article class="event" id="eventGrün">
                 <div>
-                    <h2 class="eventTitel">Event name</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce
-                        posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna
-                        eros quis urna.
-                        Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
+                    <h2 class="eventTitel">Berner Kulturfestival</h2>
+                    <p>Erlebe das Berner Kulturfestival, eine einzigartige Feier der Vielfalt und Kreativität! Tauche
+                        ein in ein facettenreiches Programm aus Live-Musik, fesselnden Kunstausstellungen und
+                        inspirierenden Performances, die die reiche Kultur der Region widerspiegeln. </p>
                     </p>
                 </div>
                 <div class="eventDatum">
@@ -110,11 +111,10 @@
 
             <article class="event" id="eventRot">
                 <div>
-                    <h2 class="eventTitel">Event name</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce
-                        posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna
-                        eros quis urna.
-                        Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
+                    <h2 class="eventTitel">Turnhalle - E.Grooves</h2>
+                    <p> Bist du bereit, die Tanzfläche zum Beben zu bringen? Eclectic Grooves ist die Party auf der du
+                        deine Hüftn schwingen und deine Moves zeigen kannst. Lass dich von den groovy Rythmen von DJ WIZ
+                        mitreissen und tanze bis in die frühen Morgenstunden. </p>
                     </p>
                 </div>
                 <div class="eventDatum">
@@ -125,11 +125,9 @@
             </article>
             <article class="event" id="eventPink">
                 <div>
-                    <h2 class="eventTitel">Event name</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Maecenas porttitor congue massa. Fusce
-                        posuere, magna sed pulvinar ultricies, purus lectus malesuada libero, sit amet commodo magna
-                        eros quis urna.
-                        Nunc viverra imperdiet enim. Fusce est. Vivamus a tellus.
+                    <h2 class="eventTitel">Streetfood-Festival 2023</h2>
+                    <p>Freue dich auf kulinarische Höhepunkte beim Berner Streetfoodfestival 2023. Auf BÄRNLÄBT kannst
+                        du deine kulinarischen Vorlieben teilen und die passende Begleitung finden. Sei dabei ! </p>
                     </p>
                 </div>
                 <div class="eventDatum">
@@ -145,21 +143,24 @@
             <article class="userRezension">
                 <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Marc, 24</p>
-                <p class="textRezensionen">«Auf BÄRNLÄBT treffe ich Gleichgesinnte und entdecke Berns Vielfalt. Die Community und die Aktivitäten begeistern mich sehr. Eine Empfehlung für unvergessliche Erlebnisse!»
-                    </p>
+                <p class="textRezensionen">«Auf BÄRNLÄBT treffe ich Gleichgesinnte und entdecke Berns Vielfalt. Die
+                    Community und die Aktivitäten begeistern mich sehr. Eine Empfehlung für unvergessliche Erlebnisse!»
+                </p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit November 2023</p>
             </article>
             <article class="userRezension" id="rezensionTobias">
                 <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Tobias, 21</p>
-                <p class="textRezensionen">«BÄRNLÄBT hilft mir, mein soziales Umfeld in Bern zu erweitern. Die Möglichkeit Veranstaltungen zu finden und sich mit anderen zu verbinden, ist einzigartig»</p>
+                <p class="textRezensionen">«BÄRNLÄBT hilft mir, mein soziales Umfeld in Bern zu erweitern. Die
+                    Möglichkeit Veranstaltungen zu finden und sich mit anderen zu verbinden, ist einzigartig»</p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit Juni 2023</p>
             </article>
             <article class="userRezension">
                 <img src="../Images/home/15_Bild.png" alt="Bild User" class="portraitRezensionen">
                 <p class="nameRezensionen">Leah, 23</p>
-                <p class="textRezensionen">«BÄRNLÄBT hat mir geholfen in Bern rasch Anschluss zu finden und grossartige Events zu erleben. Eine wahre Bereicherung für neue Freundschaften und die Berner Kultur.»
-                    </p>
+                <p class="textRezensionen">«BÄRNLÄBT hat mir geholfen in Bern rasch Anschluss zu finden und grossartige
+                    Events zu erleben. Eine wahre Bereicherung für neue Freundschaften und die Berner Kultur.»
+                </p>
                 <p class="datumRezensionen">bei BÄRNLÄBT seit August 2023</p>
             </article>
 
