--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -61,7 +61,8 @@
                     <div class="portraitText">
                         <h2 class="portraitTitle">Janic</h2>
                         <p class="portraitFunction">Operations/ Kundendienst/ externe Kommunikation</p>
-                        <p class="portraitDescription">«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»</p>
+                        <p class="portraitDescription">«Excel und PowerPoint Fanboy aber sonst eigentlich ganz okay.»
+                        </p>
                     </div>
                 </div>
             </article>
@@ -72,7 +73,8 @@
                     <div class="portraitText">
                         <h2 class="portraitTitle">Jazz</h2>
                         <p class="portraitFunction">Personalunternehmen/ Interne Kommunikation</p>
-                        <p class="portraitDescription">«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die australische Leidenschaft für Pubs
+                        <p class="portraitDescription">«Ich wurde von zwei gegensätzlichen Kulturen geprägt: die
+                            australische Leidenschaft für Pubs
                             und
                             Vokuhilas; sowie die schweizerische Begeisterung für Struktur und Wandern. Bern bietet mir
                             von
@@ -86,7 +88,8 @@
                     <div class="portraitText">
                         <h2 class="portraitTitle">Mali</h2>
                         <p class="portraitFunction">Creative Direktorin/ Designerin/ Webdesignerin</p>
-                        <p class="portraitDescription">«Meine Geldbörse und ich haben eine komplizierte Beziehung - insbesondere wenn es um den Kauf
+                        <p class="portraitDescription">«Meine Geldbörse und ich haben eine komplizierte Beziehung -
+                            insbesondere wenn es um den Kauf
                             von
                             Konzertkarten und Kinotickets geht.»</p>
                     </div>
@@ -98,7 +101,8 @@
                     <div class="portraitText">
                         <h2 class="portraitTitle">Sigi</h2>
                         <p class="portraitFunction">Content-Verfasser/ Manager public relations</p>
-                        <p class="portraitDescription">«Für gutes Essen, ein frisch gezapftes Bier und fätzige Live-Musik würde ich Berge versetzen
+                        <p class="portraitDescription">«Für gutes Essen, ein frisch gezapftes Bier und fätzige
+                            Live-Musik würde ich Berge versetzen
                             -
                             dieses Gefühl anderen Menschen zu vermitteln, ist meine grösste Freude.»</p>
                     </div>
@@ -110,7 +114,8 @@
                     <div class="portraitText">
                         <h2 class="portraitTitle">Zoé</h2>
                         <p class="portraitFunction">Gesamtmanagement/ Finanz Chef</p>
-                        <p class="portraitDescription">«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten unternehmen und dabei meine
+                        <p class="portraitDescription">«Gemeinsam Spass haben, aufregende Erlebnisse teilen, Aktivitäten
+                            unternehmen und dabei meine
                             Leidenschaft für Planung und Organisation ausleben.»</p>
                     </div>
                 </div>
@@ -149,55 +154,56 @@
                 </div>
             </article>
             <article class="placeholder"></article>
-                <article class="visionBox">
-                    <div class="vision">
-                        <p>Unsere Vision ist es, die soziale Kultur in Bern zu stärken, in- dem wir Menschen
-                            zusammenführen und die Leidenschaft für gemeinsame Veranstaltungen entfachen.
-                        </p>
-                            <p>Wieso?</p>
-                        </div>
+            <article class="visionBox">
+                <div class="vision">
+                    <p>Unsere Vision ist es, die soziale Kultur in Bern zu stärken, in- dem wir Menschen
+                        zusammenführen und die Leidenschaft für gemeinsame Veranstaltungen entfachen.
+                    </p>
+                    <p>Wieso?</p>
+                </div>
 
 
-                </article>
+            </article>
 
-                        <h2>Wöus zäme meh fäggt!</h2>
+            <h2>Wöus zäme meh fäggt!</h2>
 
-            </section>
+        </section>
 
 
-            <section>
-                <iframe class="video" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
+        <section>
+            <iframe class="video" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
 
-            </section>
+        </section>
 
-            <section>
-                    <article class="kontaktTextBox">
-                    <div class="kontaktText">
-                        <p class="paragraphText">Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback mitteilen?</p> 
-                        <p class="paragraphText"> Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie möglich bei dir
-                            melden. </p> 
-                        <p class="paragraphText"> Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine Kontaktaufnahme!</p>
-                    </div>
-                </article>
-            </section>
+        <section>
+            <article class="kontaktTextBox">
+                <div class="kontaktText">
+                    <p class="paragraphText">Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback
+                        mitteilen?</p>
+                    <p class="paragraphText"> Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie
+                        möglich bei dir
+                        melden. </p>
+                    <p class="paragraphText"> Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine
+                        Kontaktaufnahme!</p>
+                </div>
+            </article>
+        </section>
 
-            <section>
-                <article>
-                    <div>
-                        <p>BÄRNLÄBT 
-                            Holzikofenweg 8 
-                            3000 Bern
-                            
-                            info@baernlaebt.ch 
-                            +41 31 333 31 01
-                        </p>
-                    </div>
-                </article>
+            <article id="adresseBox">
+                    <p class="adresse">BÄRNLÄBT </p>
+                    <p class="adresse">Holzikofenweg 8</p>
+                    <p class="adresse"> 3000 Bern</p>
 
-            </section>
+
+                    <p class="adresse"> info@baernlaebt.ch </p>
+                    <p class="adresse">+41 31 333 31 01 </p>
+
+            </article>
+
+
     </main>
 
     <footer>
