Responsive design team portraits and overlay. Overall adjustments css.

--- a/html/ueberuns.html
+++ b/html/ueberuns.html
@@ -38,15 +38,15 @@
     <main>
         <section>
             <article class="salut">
-                <div class="teaserBoxLinks">
-                    <h2 class="teaserTextLinks">Salut</h2>
-                    <p class="teaserTextLinks">Du hast bereits viel von dir preisgegeben, daher möchten wir dir nun
+                <div class="salutBoxLinks">
+                    <h2 class="salutTextLinks">Salut</h2>
+                    <p class="salutTextLinks">Du hast bereits viel von dir preisgegeben, daher möchten wir dir nun
                         auch ein wenig von uns erzählen.
                         Nur so ist das doch fair, oder?
                     </p>
                 </div>
-                <div class="teaserBoxRechts">
-                    <p class="teaserTextRechts">Wir sind junge und lebhafte Menschen – so wie Du.
+                <div class="salutBoxRechts">
+                    <p class="salutTextRechts">Wir sind junge und lebhafte Menschen – so wie Du.
                         Wir wissen genau, wie es sich anfühlt, in eine neue Stadt zu ziehen
                         – womöglich genau wie Du.</p>
                 </div>
@@ -119,10 +119,7 @@
                             Leidenschaft für Planung und Organisation ausleben.»</p>
                     </div>
                 </div>
-
-
         </section>
-
 
         <article class="textTeam">
             <p>Wir sind Zoé, Janic, Jazz, Mali und Sigi. Bei BÄRNLÄBT sind alle verschieden und doch irgendwie
@@ -131,7 +128,6 @@
                 Medien zu tun hat. Warum? Weil wir der digitalen Welt einen kreativen Anstrich geben und gesunde
                 Kommunikation fördern möchten.</p>
         </article>
-
 
         <section>
             <article>
@@ -161,49 +157,42 @@
                     </p>
                     <p>Wieso?</p>
                 </div>
-
-
             </article>
-
             <h2>Wöus zäme meh fäggt!</h2>
-
         </section>
-
 
         <section>
             <iframe class="video" src="https://www.youtube.com/embed/hG9g4eGjbts?si=OhV_h_0a1QkQMNUw"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
-
         </section>
 
         <section>
             <article class="kontaktTextBox">
                 <div class="kontaktText">
-                    <p class="paragraphText">Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein Feedback
+                    <p class="paragraphKontaktText">Hast du jedoch noch Fragen, Anregungen oder möchtest du uns dein
+                        Feedback
                         mitteilen?</p>
-                    <p class="paragraphText"> Dann nutze gerne unser Kontaktformular und wir werden uns so schnell wie
+                    <p class="paragraphKontaktText"> Dann nutze gerne unser Kontaktformular und wir werden uns so
+                        schnell wie
                         möglich bei dir
                         melden. </p>
-                    <p class="paragraphText"> Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine
+                    <p class="paragraphKontaktText"> Wir schätzen dein Interesse an BÄRNLÄBT und freuen uns auf deine
                         Kontaktaufnahme!</p>
                 </div>
             </article>
         </section>
 
-            <article id="adresseBox">
-                    <p class="adresse">BÄRNLÄBT </p>
-                    <p class="adresse">Holzikofenweg 8</p>
-                    <p class="adresse"> 3000 Bern</p>
+        <article id="adresseBox">
+            <p class="adresse">BÄRNLÄBT </p>
+            <p class="adresse">Holzikofenweg 8</p>
+            <p class="adresse"> 3000 Bern</p>
 
 
-                    <p class="adresse"> info@baernlaebt.ch </p>
-                    <p class="adresse">+41 31 333 31 01 </p>
-
-            </article>
-
-
+            <p class="adresse"> info@baernlaebt.ch </p>
+            <p class="adresse">+41 31 333 31 01 </p>
+        </article>
     </main>
 
     <footer>
@@ -215,7 +204,6 @@
             <p class="footerTitel">Kontakt</p>
             <p class="footerText">info@baernlaebt.ch</p>
             <p class="footerText">+41 31 333 31 01</p>
-
         </section>
 
         <section class="footerTextContainer" id="footerColumn2">
@@ -240,7 +228,6 @@
             <img src="../Images/Icons/Instagram.png" alt="platzhalter" class="footerSoMe">
             <img src="../Images/Icons/Facebook.png" alt="platzhalter" class="footerSoMe">
             <img src="../Images/Icons/X.png" alt="platzhalter" class="footerSoMe">
-
         </section>
 
     </footer>
