Unknown edits to Angebot, Impressum & Kontakt.

--- a/html/Kontakt.html
+++ b/html/Kontakt.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BÄRNLÄBT kontakt</title>
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="https://use.typekit.net/qvo7bqu.css">
     <link rel="stylesheet" href="../CSS/kontakt.css">
