Images bei responsiveness gefixxt,

--- a/html/angebot.html
+++ b/html/angebot.html
@@ -24,7 +24,7 @@
             </div>
         </section>
 
-        <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
+        <img src="../Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
             <a href="home.html" class="button">Home</a>
@@ -87,7 +87,7 @@
                 Veranstaltung auf öffentlich.</p>
             <p class="paragraphText">Zeige deinen Matches, was du als Gastgeber:in draufhast. </p>
         </article>
-        <img src="../Images/Angebot/iPhone Beerpong.png"
+        <img src="../Images/Angebot/iPhoneBeerpong.png"
             alt="Bild mit zwei iPhones worauf gerade eine Beerpong Party abgemacht wird" id="beerpong">
         <h3 id="verein">«e Verein fäggt, imfau!»</h3>
         <article class="paragraph">
@@ -127,7 +127,7 @@
         <section class="footerTextContainer" id="footerColumn3">
             <a href="home.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
-            <a href="über uns.html" class="footerText">Über uns</a>
+            <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
             <a href="impressum.html" class="footerText">Impressum</a>
 
