--- a/html/kontakt.html
+++ b/html/kontakt.html
@@ -22,7 +22,7 @@
             </div>
         </section>
 
-        <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
+        <img src="../Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <section class="menu-container">
             <a href="home.html" class="button">Home</a>
