--- a/html/impressum.html
+++ b/html/impressum.html
@@ -24,7 +24,7 @@
             </div>
         </section>
 
-        <img src="../Images/Logo klein.png" alt="logo Bärnläbt" class="logo">
+        <img src="../Images/LogoKlein.png" alt="logo Bärnläbt" class="logo">
 
         <div class="menu-container">
             <a href="home.html" class="button">Home</a>
@@ -91,7 +91,7 @@
         <section class="footerTextContainer" id="footerColumn3">
             <a href="home.html" class="footerText">Home</a>
             <a href="angebot.html" class="footerText">Angebot</a>
-            <a href="über uns.html" class="footerText">Über uns</a>
+            <a href="ueberuns.html" class="footerText">Über uns</a>
             <a href="kontakt.html" class="footerText">Kontakt</a>
             <a href="impressum.html" class="footerText">Impressum</a>
 
